# smart-pdf-extractor

./: .gitignore  README.md  pdf_ingestion_layer_design.md
pdf_ingestion/: .env.example  Dockerfile  README.md  __init__.py  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
pdf_ingestion/api/: config.py  errors.py  main.py  progress.py
pdf_ingestion/api/admin/: auth_utils.py
pdf_ingestion/api/middleware/: auth.py  log_sink.py  rbac.py
pdf_ingestion/api/models/: __init__.py  request.py  response.py  tenant.py
pdf_ingestion/api/routes/: admin_alerts.py  admin_auth.py  admin_logs.py  admin_usage.py  admin_users.py  batches.py  (+7 more)
pdf_ingestion/db/: __init__.py  admin_models.py  models.py  session.py
pdf_ingestion/frontend/: RedactionSettings.jsx  index.html  package-lock.json  package.json
pdf_ingestion/pipeline/: assembler.py  classifier.py  dedup_store.py  delivery.py  ingestion.py  models.py  packager.py  ports.py  runner.py  section_segmenter.py  triangulation.py  validator.py
pdf_ingestion/tests/: mocks.py  test_admin_alerts_routes.py  test_admin_auth_routes.py  test_admin_logs_routes.py  test_admin_usage_routes.py  test_admin_users_routes.py  test_alert_engine.py  test_assembler.py  test_auth_utils.py  test_bedrock_client.py  test_chunked_extraction.py  test_classifier.py  test_delivery.py  test_endpoints_week3.py  test_extract_endpoint.py  test_ingestion.py  test_log_sink.py  test_mocks.py  test_notifier.py  test_ocr_client.py  test_rbac_middleware.py  test_redactor.py  test_schemas.py  test_triangulation.py  test_vlm_verifier.py
(+80 files in other folders)
